--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
@@ -41,7 +43,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
-    "pre-commit": "lint-staged"
+
   },
   "lint-staged": {
     "*.{js,jsx,vue,ts,tsx}": [
